--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,13 @@
             <artifactId>modelmapper</artifactId>
             <version>0.7.4</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.16.6</version>
+        </dependency>
+
         <!--TEST-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
