--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,18 @@
             <version>4.5.1</version>
         </dependency>
 
+        <!--WebjJrs-->
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>react</artifactId>
+            <version>0.13.3</version>
+        </dependency>
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>bootstrap</artifactId>
+            <version>3.3.5</version>
+        </dependency>
+
         <!--TEST-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
