--- a/pom.xml
+++ b/pom.xml
@@ -69,12 +69,17 @@
         <dependency>
             <groupId>org.webjars</groupId>
             <artifactId>react</artifactId>
-            <version>0.13.3</version>
+            <version>0.14.0</version>
         </dependency>
         <dependency>
             <groupId>org.webjars</groupId>
             <artifactId>bootstrap</artifactId>
             <version>3.3.5</version>
+        </dependency>
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>babel</artifactId>
+            <version>5.8.29-1</version>
         </dependency>
 
         <!--TEST-->
